--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,39 @@
     <title>Restaurant Page</title>
   </head>
   <body>
-    <h1>oi</h1>
+    <header>
+      <div class="logo-container">
+        <img src="../imgs/logo.png" alt="logo" />
+        <h1>Reservoir</h1>
+      </div>
+      <nav>
+        <button>Home</button>
+        <button>Menu</button>
+        <button>About</button>
+        <button>Order</button>
+      </nav>
+    </header>
+    <div id="content" class="content-container">
+      <!-- <p>Where Taste Meets Elegance</p>
+      <img src="../imgs/food.jpg"> -->
+    </div>
+    <!-- <footer>
+        <div>
+    Locations:
+        <p>1153 NA Grand Hotel,</p>
+        <p>3489 FR Normay St</p>
+        </div>
+
+      <div>
+        Hours:
+        <p>Sunday: 8am - 8pm</p>
+        <p>Monday: 6am - 6pm</p>
+        <p>Tuesday: 6am - 6pm</p>
+        <p>Wednesday: 6am - 6pm</p>
+        <p>Thursday: 6am - 10pm</p>
+        <p>Friday: 6am - 10pm</p>
+        <p>Saturday: 8am - 10pm</p>
+      </div>
+      </footer> -->
   </body>
 </html>
