--- a/src/index.html
+++ b/src/index.html
@@ -20,25 +20,19 @@
     </header>
     <div id="content" class="content-container">
       <!-- <p>Where Taste Meets Elegance</p>
-      <img src="../imgs/food.jpg"> -->
-    </div>
-    <!-- <footer>
+      <img src="../imgs/food.jpg">
+          <footer>
         <div>
     Locations:
         <p>1153 NA Grand Hotel,</p>
-        <p>3489 FR Normay St</p>
-        </div>
-
       <div>
         Hours:
         <p>Sunday: 8am - 8pm</p>
-        <p>Monday: 6am - 6pm</p>
-        <p>Tuesday: 6am - 6pm</p>
-        <p>Wednesday: 6am - 6pm</p>
-        <p>Thursday: 6am - 10pm</p>
         <p>Friday: 6am - 10pm</p>
         <p>Saturday: 8am - 10pm</p>
       </div>
       </footer> -->
+    </div>
+
   </body>
 </html>
