feat: add menu page content

--- a/src/index.html
+++ b/src/index.html
@@ -11,28 +11,37 @@
         <img src="../imgs/logo.png" alt="logo" />
         <h1>Reservoir</h1>
       </div>
-      <nav>
-        <button>Home</button>
-        <button>Menu</button>
-        <button>About</button>
-        <button>Order</button>
+      <nav id="navigation">
+        <button id="home-btn" class="home">Home</button>
+        <button id="menu-btn" class="menu">Menu</button>
+        <button id="about-btn" class="about">About</button>
+        <button id="content-btn" class="contact">Contact</button>
       </nav>
     </header>
     <div id="content" class="content-container">
-      <!-- <p>Where Taste Meets Elegance</p>
-      <img src="../imgs/food.jpg">
-          <footer>
-        <div>
-    Locations:
-        <p>1153 NA Grand Hotel,</p>
-      <div>
-        Hours:
-        <p>Sunday: 8am - 8pm</p>
-        <p>Friday: 6am - 10pm</p>
-        <p>Saturday: 8am - 10pm</p>
+      <!-- injected by js -->
+      <div class="menus">
+        <div class="menu-item">
+          <img src="../imgs/caviar.jpg" alt="caviar" />
+          <p>Caviar</p>
+          <p>25.99$</p>
+        </div>
+        <div class="menu-item">
+          <img src="../imgs/wagyu.jpg" alt="wagyu" />
+          <p>A5 Wagyu</p>
+          <p>79.99$</p>
+        </div>
+        <div class="menu-item">
+          <img src="../imgs/shrimp.jpg" alt="Shrimp" />
+          <p>Fancy Shrimp</p>
+          <p>34.99$</p>
+        </div>
+        <div class="menu-item">
+          <img src="../imgs/burger.jpg" alt="Burger" />
+          <p>Caramelized Onions Burger</p>
+          <p>19.99$</p>
+        </div>
       </div>
-      </footer> -->
     </div>
-
   </body>
 </html>
