refactor: add menu content from js instead of html

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     </header>
     <div id="content" class="content-container">
       <!-- injected by js -->
-      <div class="menus">
+      <!-- <div class="menus">
         <div class="menu-item">
           <img src="../imgs/caviar.jpg" alt="caviar" />
           <p>Caviar</p>
@@ -41,7 +41,7 @@
           <p>Caramelized Onions Burger</p>
           <p>19.99$</p>
         </div>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
