feat: add about page

--- a/src/index.html
+++ b/src/index.html
@@ -20,28 +20,18 @@
     </header>
     <div id="content" class="content-container">
       <!-- injected by js -->
-      <!-- <div class="menus">
-        <div class="menu-item">
-          <img src="../imgs/caviar.jpg" alt="caviar" />
-          <p>Caviar</p>
-          <p>25.99$</p>
-        </div>
-        <div class="menu-item">
-          <img src="../imgs/wagyu.jpg" alt="wagyu" />
-          <p>A5 Wagyu</p>
-          <p>79.99$</p>
-        </div>
-        <div class="menu-item">
-          <img src="../imgs/shrimp.jpg" alt="Shrimp" />
-          <p>Fancy Shrimp</p>
-          <p>34.99$</p>
-        </div>
-        <div class="menu-item">
-          <img src="../imgs/burger.jpg" alt="Burger" />
-          <p>Caramelized Onions Burger</p>
-          <p>19.99$</p>
-        </div>
-      </div> -->
+    <div class="about">
+  
+  <p>
+    Founded in 2050 by Gabe Newell, Reservoir is a cozy, modern restaurant built around one simple idea:
+    great food should feel unforgettable. Our chefs craft every dish from
+    fresh, seasonal ingredients, blending classic flavors with creative
+    twists. Whether you're here for a quiet dinner, a quick lunch, or a
+    celebration with friends, Reservoir offers a warm atmosphere, attentive
+    service, and flavors you'll remember.
+  </p>
+      <p></p>
+    </div>
     </div>
   </body>
 </html>
