fix: images renders twice when you switch tabs

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,7 @@
     </header>
     <div id="content" class="content-container">
       <!-- injected by js -->
-    <div class="about">
-  
+    <!-- <div class="about">
   <p>
     Founded in 2050 by Gabe Newell, Reservoir is a cozy, modern restaurant built around one simple idea:
     great food should feel unforgettable. Our chefs craft every dish from
@@ -30,8 +29,7 @@
     celebration with friends, Reservoir offers a warm atmosphere, attentive
     service, and flavors you'll remember.
   </p>
-      <p></p>
-    </div>
+    </div> -->
     </div>
   </body>
 </html>
