--- a/src/index.html
+++ b/src/index.html
@@ -15,21 +15,18 @@
         <button id="home-btn" class="home">Home</button>
         <button id="menu-btn" class="menu">Menu</button>
         <button id="about-btn" class="about">About</button>
-        <button id="content-btn" class="contact">Contact</button>
+        <button id="contact-btn" class="contact">Contact</button>
       </nav>
     </header>
     <div id="content" class="content-container">
       <!-- injected by js -->
-    <!-- <div class="about">
-  <p>
-    Founded in 2050 by Gabe Newell, Reservoir is a cozy, modern restaurant built around one simple idea:
-    great food should feel unforgettable. Our chefs craft every dish from
-    fresh, seasonal ingredients, blending classic flavors with creative
-    twists. Whether you're here for a quiet dinner, a quick lunch, or a
-    celebration with friends, Reservoir offers a warm atmosphere, attentive
-    service, and flavors you'll remember.
-  </p>
-    </div> -->
+       <!-- <div class="contact">
+      <h1>To Order/inquery:</h1>
+      <p>+45612095493785</p>
+      <h1>For support</h1>
+      <p>+456982309644</p>
+      <p>Reservoir@legit.com</p>
+       </div> -->
     </div>
   </body>
 </html>
