--- a/index.html
+++ b/index.html
@@ -1,32 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Restaurant Page</title>
-  <script defer src="main.js"></script></head>
-  <body>
-    <header>
-      <div class="logo-container">
-        <img src="bc45cc14881161428b00.png" alt="logo" />
-        <h1>Reservoir</h1>
-      </div>
-      <nav id="navigation">
-        <button id="home-btn" class="home">Home</button>
-        <button id="menu-btn" class="menu">Menu</button>
-        <button id="about-btn" class="about">About</button>
-        <button id="contact-btn" class="contact">Contact</button>
-      </nav>
-    </header>
-    <div id="content" class="content-container">
-      <!-- injected by js -->
-       <!-- <div class="contact">
-      <h1>To Order/inquery:</h1>
-      <p>+45612095493785</p>
-      <h1>For support</h1>
-      <p>+456982309644</p>
-      <p>Reservoir@legit.com</p>
-       </div> -->
-    </div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Restaurant Page</title><script defer="defer" src="main.d1b5e5549170058b75c9.js"></script><link href="main.4e60d31e2e3b66d55fd6.css" rel="stylesheet"></head><body><header><div class="logo-container"><img src="bc45cc14881161428b00.png" alt="logo"/><h1>Reservoir</h1></div><nav id="navigation"><button id="home-btn" class="home">Home</button> <button id="menu-btn" class="menu">Menu</button> <button id="about-btn" class="about">About</button> <button id="contact-btn" class="contact">Contact</button></nav></header><div id="content" class="content-container"></div></body></html>
